--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Documento sin t&iacute;tulo</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Documento sin título</title>
 </head>
 
-<body>
-<div align="center">
-  <p><em>VIDEOTECA</em></p>
-  <table width="800" border="2">
+<body>videoteca
+<table width="564" border="1">
+<tr>
+  <td><table width="557" border="1">
     <tr>
-      <td height="29"><a href="https://youtu.be/I3dezFzsNss?si=Bdj306CDaykgZYcX">https://youtu.be/I3dezFzsNss?si=Bdj306CDaykgZYcX</a></td>
+      <td width="547"><a href="https://youtu.be/0tJFn8be32U?si=8AB-xT6hYHoVRZPP">https://youtu.be/0tJFn8be32U?si=8AB-xT6hYHoVRZPP</a></td>
     </tr>
     <tr>
-      <td height="37"><a href="https://youtu.be/uxmP4b2a0uY?si=jUTQ9dm7de78Qi5V">https://youtu.be/uxmP4b2a0uY?si=jUTQ9dm7de78Qi5V</a></td>
+      <td><a href="https://youtu.be/wKysONrSmew?si=LCvtTuHkyjzi8gQd">https://youtu.be/wKysONrSmew?si=LCvtTuHkyjzi8gQd</a></td>
     </tr>
     <tr>
-      <td height="51"><a href="https://youtu.be/gAal8xHfV0c?si=TsIIP1wbnt7yywl8">https://youtu.be/gAal8xHfV0c?si=TsIIP1wbnt7yywl8</a></td>
+      <td><a href="https://youtu.be/XsX3ATc3FbA?si=3nlvq3JiI6bFC8ZC">https://youtu.be/XsX3ATc3FbA?si=3nlvq3JiI6bFC8ZC</a></td>
     </tr>
     <tr>
-      <td height="47"><a href="https://youtu.be/2IkoKhr6Tss?si=YdCV8w7bE0bsQB5w">https://youtu.be/2IkoKhr6Tss?si=YdCV8w7bE0bsQB5w</a></td>
+      <td><a href="https://youtu.be/43r6lXilbcQ?si=CD6IBILW82LUk4us">https://youtu.be/43r6lXilbcQ?si=CD6IBILW82LUk4us</a></td>
     </tr>
     <tr>
-      <td height="52"><a href="https://youtu.be/gdZLi9oWNZg?si=T4NNqfe2GqTn1KE3">https://youtu.be/gdZLi9oWNZg?si=T4NNqfe2GqTn1KE3</a></td>
+      <td><a href="https://youtu.be/kTlv5_Bs8aw?si=k-ZM5wAQERD8UpZt">https://youtu.be/kTlv5_Bs8aw?si=k-ZM5wAQERD8UpZt</a></td>
     </tr>
     <tr>
-      <td height="40"><a href="https://youtu.be/GZjt_sA2eso?si=GXOsTiy2SD6pw6il">https://youtu.be/GZjt_sA2eso?si=GXOsTiy2SD6pw6il</a></td>
+      <td><a href="https://youtu.be/gdZLi9oWNZg?si=7dyoP-OTRAmoYJXJ">https://youtu.be/gdZLi9oWNZg?si=7dyoP-OTRAmoYJXJ</a></td>
     </tr>
-  </table>
-  <p>&nbsp;  </p>
-</div>
+  </table>    <a href="https://youtu.be/gdZLi9oWNZg?si=7dyoP-OTRAmoYJXJ"></a></td>
+</tr>
+</table>
 </body>
 </html>
