--- a/index.html
+++ b/index.html
@@ -1,34 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Documento sin título</title>
+
+<title>san antonio acutla</title>
 </head>
 
-<body>videoteca
-<table width="564" border="1">
-<tr>
-  <td><table width="557" border="1">
-    <tr>
-      <td width="547"><a href="https://youtu.be/0tJFn8be32U?si=8AB-xT6hYHoVRZPP">https://youtu.be/0tJFn8be32U?si=8AB-xT6hYHoVRZPP</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://youtu.be/wKysONrSmew?si=LCvtTuHkyjzi8gQd">https://youtu.be/wKysONrSmew?si=LCvtTuHkyjzi8gQd</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://youtu.be/XsX3ATc3FbA?si=3nlvq3JiI6bFC8ZC">https://youtu.be/XsX3ATc3FbA?si=3nlvq3JiI6bFC8ZC</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://youtu.be/43r6lXilbcQ?si=CD6IBILW82LUk4us">https://youtu.be/43r6lXilbcQ?si=CD6IBILW82LUk4us</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://youtu.be/kTlv5_Bs8aw?si=k-ZM5wAQERD8UpZt">https://youtu.be/kTlv5_Bs8aw?si=k-ZM5wAQERD8UpZt</a></td>
-    </tr>
-    <tr>
-      <td><a href="https://youtu.be/gdZLi9oWNZg?si=7dyoP-OTRAmoYJXJ">https://youtu.be/gdZLi9oWNZg?si=7dyoP-OTRAmoYJXJ</a></td>
-    </tr>
-  </table>    <a href="https://youtu.be/gdZLi9oWNZg?si=7dyoP-OTRAmoYJXJ"></a></td>
-</tr>
-</table>
+<body>
+    <h1><p style="color:#03F"  align="center" > San Antonio Acutla </p></h1>
+    <h2 style="color:#906" >visita del presidente</h2>
+    <h3 style=" color:#000" >El presidente Andres Manuel Lopez Obrador </h3>
+    <h4><p style="color:#000" > Anucio el apoyo en los programas sembrando vida,     larito nutritivo, apoyo con bioinsumos para la produccion de maiz y huetos     escolares;construccion de una olla de captacion de agua, infraestreuctura,      mobiliario y equipamiento escolar. </p></h4>
+    <img src="Screenshot_20250227_195912_Facebook.jpg" alt="" width="200" height="150" >
+    <img src="Screenshot_20250227_195952_Facebook.jpg" alt="" width="200" height="150">
 </body>
 </html>
