--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 
 <html>
 <head>
-
+<link rel="stylesheet" type="text/css" href="css.css">
 <title>san antonio acutla</title>
 </head>
 
 <body>
+<apollos>
+Apollos para la comunidad
+</apollos>
+
+
     <h1><p style="color:#03F"  align="center" > San Antonio Acutla </p></h1>
     <h2 style="color:#906" >visita del presidente</h2>
     <h3 style=" color:#000" >El presidente Andres Manuel Lopez Obrador </h3>
+    
+    <dos>
+    Creacion de una olla de agua
+    </dos>
     <h4><p style="color:#000" > Anucio el apoyo en los programas sembrando vida,     larito nutritivo, apoyo con bioinsumos para la produccion de maiz y huetos     escolares;construccion de una olla de captacion de agua, infraestreuctura,      mobiliario y equipamiento escolar. </p></h4>
     <img src="Screenshot_20250227_195912_Facebook.jpg" alt="" width="200" height="150" >
     <img src="Screenshot_20250227_195952_Facebook.jpg" alt="" width="200" height="150">
