--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css.css">
+
 <title>san antonio acutla</title>
 </head>
-
+<link rel="stylesheet" type="text/css" href="../tarea2/Untitled-4.css">
 <body>
-<apollos>
-Apollos para la comunidad
-</apollos>
+<tres>NOTICIA LOCAL</tres>
 
-
-    <h1><p style="color:#03F"  align="center" > San Antonio Acutla </p></h1>
-    <h2 style="color:#906" >visita del presidente</h2>
-    <h3 style=" color:#000" >El presidente Andres Manuel Lopez Obrador </h3>
+<h1><p style="color:#03F"  align="center" > San Antonio Acutla </p></h1>
     
-    <dos>
-    Creacion de una olla de agua
-    </dos>
-    <h4><p style="color:#000" > Anucio el apoyo en los programas sembrando vida,     larito nutritivo, apoyo con bioinsumos para la produccion de maiz y huetos     escolares;construccion de una olla de captacion de agua, infraestreuctura,      mobiliario y equipamiento escolar. </p></h4>
+    <h2 style="color:#906" >visita del presidente</h2>
+    <any>Apollos para las personas</any>
+    <h3 style=" color:#000" >El presidente Andres Manuel Lopez Obrador </h3>
+  
+    <h4>
+      <p style="color:#000" > Anucio el apoyo en los programas sembrando vida,     larito nutritivo, apoyo con bioinsumos para la produccion de maiz y huetos     escolares;construccion de una olla de captacion de agua, infraestreuctura,      mobiliario y equipamiento escolar.</p></h4>
     <img src="Screenshot_20250227_195912_Facebook.jpg" alt="" width="200" height="150" >
     <img src="Screenshot_20250227_195952_Facebook.jpg" alt="" width="200" height="150">
 </body>
